load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "access-control",
    srcs = ["access_control.go"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/access-control",
    visibility = ["//visibility:public"],
    deps = ["@com_github_casbin_casbin_v2//:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":access-control",
    visibility = ["//visibility:public"],
)
