load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "google_cloud.go",
        "transform.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/helper",
    visibility = ["//visibility:public"],
)
