load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "identity_proto",
    srcs = ["Identity.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "identity_go_proto",
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/identity",
    proto = ":identity_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "identity",
    embed = [":identity_go_proto"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/identity",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":identity",
    visibility = ["//visibility:public"],
)
