load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bugsnag.go",
        "logger.go",
        "trace.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/init",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bugsnag_bugsnag_go//:go_default_library",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
    ],
)
