load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitor",
    srcs = [
        "bugsnag.go",
        "logger.go",
        "trace.go",
    ],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bugsnag_bugsnag_go//:bugsnag-go",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:trace",
        "@dev_unknwon_clog_v2//:clog",
        "@io_opentelemetry_go_otel//api/global",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
