load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitor",
    srcs = [
        "bugsnag.go",
        "logger.go",
    ],
    importpath = "github.com/innovation-upstream/iu-common-go/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bugsnag_bugsnag_go//:go_default_library",
        "@dev_unknwon_clog_v2//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":monitor",
    visibility = ["//visibility:public"],
)
