load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitor",
    srcs = [
        "bugsnag.go",
        "logger.go",
    ],
    importpath = "github.com/innovation-upstream/iu-common-go/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bugsnag_bugsnag_go//:bugsnag-go",
        "@dev_unknwon_clog_v2//:clog",
    ],
)
