load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pubsub_proto",
    srcs = ["PubSub.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pubsub_go_proto",
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/pubsub",
    proto = ":pubsub_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pubsub",
    embed = [":pubsub_go_proto"],
    importpath = "gitlab.innovationup.stream/innovation-upstream/iu-common-go/pubsub",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":pubsub",
    visibility = ["//visibility:public"],
)
