load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "relay",
    srcs = ["grpc_auth_helper.go"],
    importpath = "github.com/innovation-upstream/iu-common-go/relay",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_api//idtoken:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":relay",
    visibility = ["//visibility:public"],
)
